--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 .slider:after { content: "☀️" }
 
-input:checked + .slider { background-color: #333333; }
+input:checked + .slider { background-color: #ffffff; }
 
 input:focus + .slider { box-shadow: 0 0 1px #333333; }
 
