--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ async function processEvent_dark(event) {
 	if (this.getAttribute("checked") == false) {
 		console.log('processEvent_dark  - checked false');
 	} else  {
-		onsole.log('processEvent_dark  - checked true');
+		console.log('processEvent_dark  - checked true');
 		
 		// Display Dark
 		document.body.style.backgroundColor = "#333333";
