--- a/index3.html
+++ b/index3.html
@@ -39,7 +39,7 @@ async function run_it2() {
 	// -----------------------------
 
 	// Flatten array
-	var xs_test_flat = await flat_arr(normalArray);   // [timesteps=11]
+	var xs_test_flat = await flat_arr(x);   // [timesteps=11]
 	console.log('xs_test_flat: ', xs_test_flat);
 
 	// -----------------------------
