--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ function processEvent_SpansliderOption(event) {
 	
 // ----------------------------------------------------
 
-document.getElementById("toggle_type0").addEventListener("click", processEvent_checkboxOption, false);
+document.getElementById("toggle_type").addEventListener("click", processEvent_checkboxOption, false);
 	
 function processEvent_checkboxOption(event) {
 	
