--- a/index3.html
+++ b/index3.html
@@ -291,8 +291,8 @@ async function reshape_arr(arr, desired_dims) {
 	if (shap.length == 2) {
 		// Reshape 1D_flat to 2d
 		var c = 0;
-		for (var i=0; i<dims[0]; i++) {
-			for (var j=0; j<dims[1]; j++) {
+		for (var i=0; i<desired_dims[0]; i++) {
+			for (var j=0; j<desired_dims[1]; j++) {
 				arr[i][j][k] = xs_test_flat.at(c);
 				c = c + 1;
 			}
@@ -300,9 +300,9 @@ async function reshape_arr(arr, desired_dims) {
 	} else if (shap.length == 3) {
 		// Reshape 1D_flat to 3d
 		var c = 0;
-		for (var i=0; i<dims[0]; i++) {
-			for (var j=0; j<dims[1]; j++) {
-				for (var k=0; k<dims[2]; k++) {
+		for (var i=0; i<desired_dims[0]; i++) {
+			for (var j=0; j<desired_dims[1]; j++) {
+				for (var k=0; k<desired_dims[2]; k++) {
 				       arr[i][j][k] = xs_test_flat.at(c);
 					c = c + 1;
 				}
@@ -311,10 +311,10 @@ async function reshape_arr(arr, desired_dims) {
 	} else if (shap.length == 4) {
 		// Reshape 1D_flat to 4d
 		var c = 0;
-		for (var i=0; i<dims[0]; i++) {
-			for (var j=0; j<dims[1]; j++) {
-				for (var k=0; k<dims[2]; k++) {
-					for (var l=0; l<dims[3]; l++) {
+		for (var i=0; i<desired_dims[0]; i++) {
+			for (var j=0; j<desired_dims[1]; j++) {
+				for (var k=0; k<desired_dims[2]; k++) {
+					for (var l=0; l<desired_dims[3]; l++) {
 					       arr[i][j][k][l] = xs_test_flat.at(c);
 						c = c + 1;
 					}
