--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <label class="switch"><input type="checkbox" id="toggle_type"><span class="slider"></span></label>
 
 <!-- Radio button menu: put in body -->
-<fieldset style="border=0";">
+<fieldset style="border=none";">
 <input type="radio" id="light" name="radio_name" value="light" /><label for="light">☀️</label>
 <input type="radio" id="dark" name="radio_name" value="dark" /><label for="dark">☀🌒</label>
 </fieldset>
@@ -81,7 +81,7 @@ function processEvent_checkboxOption(event) {
 		document.querySelector("h1").style.color = "#333333";
 
 		// When page is light, [slider button] is light (setting below), [background of input] is dark
-		document.querySelector('slider').style.backgroundColor = "#ffffff";
+		document.querySelector('.slider').style.backgroundColor = "#ffffff";
 		
 		console.log('event check in light: ', document.getElementById("toggle_type").checked);
 		
@@ -95,7 +95,7 @@ function processEvent_checkboxOption(event) {
 		document.querySelector("h1").style.color = "#ffffff";
 
 		// When page is dark, [slider button] is dark (setting below), [background of input] is light
-		document.querySelector('slider').style.backgroundColor = "#333333";
+		document.querySelector('.slider').style.backgroundColor = "#333333";
 		
 		console.log('event check in dark: ', document.getElementById("toggle_type").checked);
 		
