--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   /* background-color: #424240;  */
   -webkit-transition: .4s;
   transition: .4s;
+	border-radius: 15px;
 }
 
 .slider:before {
@@ -42,6 +43,7 @@
   /* background-color: #ffffff; */
   -webkit-transition: .4s;
   transition: .4s;
+	border-radius: 15px;
 }
 
 .slider:after { content: "☀️" }
