--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  /* background-color: #424240;  */
+  background-color: #333333;
   -webkit-transition: .4s;
   transition: .4s;
 	border-radius: 15px;
@@ -40,7 +40,7 @@
   left: 1px;
   bottom: 1px;
   /* When page is light, [slider button] is light (setting below), [background of input] is dark */
-  /* background-color: #ffffff; */
+  background-color: #ffffff;
   -webkit-transition: .4s;
   transition: .4s;
 	border-radius: 15px;
