--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   -webkit-transition: .4s;
   transition: .4s;
 	border-radius: 5px;
+	border: 0.25px solid black;
 }
 
 .slider:before {
@@ -46,10 +47,11 @@
   -webkit-transition: .4s;
   transition: .4s;
   border-radius: 5px;
+	border: 0.25px solid black;
 }
 
 .slider:after { 
-  content: ""; background-color: #333333;
+  content: ""; background-color: #333333; border: 0.25px solid black;
 }
 
 /* When page is dark, [slider button] is dark, [background of input] is light (setting below) */
