--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
 	border: 0.25px solid black;
 }
 
-.slider:after { 
-  content: ""; background-color: #333333; border: 0.25px solid black;
-}
+.slider:after { content: ""; }
 
 /* When page is dark, [slider button] is dark, [background of input] is light (setting below) */
 input:checked + .slider { background-color: #ffffff; }
