--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ function processEvent_checkboxOption(event) {
 		document.querySelector("h1").style.color = "#333333";
 
 		// When page is light, [slider button] is light (setting below), [background of input] is dark
-		document.querySelector('.slider').style.backgroundColor = "#333333";
+		// document.querySelector('.slider').style.backgroundColor = "#333333";
 		
 		console.log('event check in light: ', document.getElementById("toggle_type").checked);
 		
@@ -100,7 +100,7 @@ function processEvent_checkboxOption(event) {
 		document.querySelector("h1").style.color = "#ffffff";
 
 		// When page is dark, [slider button] is dark (setting below), [background of input] is light
-		document.querySelector('.slider').style.backgroundColor = "#ffffff";
+		// document.querySelector('.slider').style.backgroundColor = "#ffffff";
 		
 		console.log('event check in dark: ', document.getElementById("toggle_type").checked);
 		
