--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 <br><br>
 
 <!-- A file to drag to the dropArea -->
-<input type="file" id="upload_file" accept="audio/*" style="display:none" multiple>
+<input type="file" id="upload_file" accept="audio/*" style="display:block" multiple>
 
 <br><br>
 
