--- a/index1.html
+++ b/index1.html
@@ -253,7 +253,9 @@ function processEvent_dragover_way1(event) {
 
 async function Submit_to_cloudStorage() {
 
-	console.log()
+	console.log('filelist: ', filelist);
+
+	console.log('obj: ', obj);
 }
 
 
