--- a/index1.html
+++ b/index1.html
@@ -223,7 +223,7 @@ function processEvent_drop(event) {
 	  event.target.appendChild(dragElement);
 
 	  // Add selected data
-	  obj[document.getElementById(file_name)] =  base64_string;
+	  obj[document.getElementById(file_name)] = document.getElementById("base64_string");
   }
 
   // --------------------------
